--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,23 @@
         </button>
 
     </header>
+    <section class="contenedor-calculadora">
+        <table>
+            <thead >
+              <tr >
+                <th>The table header</th>
+              </tr>
+            </thead>
+            <tbody>
+                
+              <tr style="background: blue; padding:5px">
+                <td style="background: red">The table body</td>
+                <td>with two columns</td>
+              </tr>
+              
+            </tbody>
+          </table>
+    </section>
     <!--NAVBAR-->
     <nav class="menu">
         <button class="btn-outline btn-navbar">
