--- a/prb.html
+++ b/prb.html
@@ -44,7 +44,7 @@
 <body>
     <h1>Datos del Acelerómetro y Giroscopio</h1>
     <div id="data">Esperando datos del sensor...</div>
-    <div id="logs">Logs:</div>
+    <!-- <div id="logs">Logs:</div> -->
 
     <script>
         function initSensors() {
