--- a/prb.html
+++ b/prb.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,51 +16,77 @@
             margin: 0;
             background-color: #f0f0f0;
         }
+
         #data {
+            text-align: center;
+            width: 300px;
+        }
+        h1{
+            margin-top: 100px;
+        }
+        #accelerometer,
+        #gyroscope {
             padding: 20px;
             background-color: #fff;
             border: 1px solid #ddd;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            height: 500px;
             position: relative;
-            width: 300px;
+            height: 400px;
+            margin-bottom: 20px;
         }
-        .A1, .A2, .A3 {
+
+        #gyroscope {
+            position: relative;
+        }
+
+        .A1,
+        .A2,
+        .A3 {
             position: absolute;
             left: 50%;
             transform: translate(-50%);
         }
-        .A1{
+
+        .A1 {
             top: 20%;
         }
-        .A2{
+
+        .A2 {
             top: 45%;
-            transform: translate(-50%,-50%);
+            transform: translate(-50%, -50%);
         }
-        .A3{
+
+        .A3 {
             bottom: 20%;
         }
-        .B1, .B2, .B3 {
+
+        .B1,
+        .B2,
+        .B3 {
             position: absolute;
             left: 50%;
             transform: translate(-50%);
         }
-        .B1{
+
+        .B1 {
             top: 60%;
         }
-        .B2{
+
+        .B2 {
             top: 75%;
-            transform: translate(-50%,-50%);
+            transform: translate(-50%, -50%);
         }
-        .B3{
+
+        .B3 {
             bottom: 5%;
         }
-        h2{
+
+        h2 {
             border-bottom: 2px solid rgb(23, 23, 23);
             padding-bottom: 10px;
         }
+
         #logs {
             margin-top: 20px;
             width: 80%;
@@ -71,6 +98,7 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
         .log-entry {
             margin-bottom: 5px;
             font-size: 14px;
@@ -78,6 +106,7 @@
         }
     </style>
 </head>
+
 <body>
     <h1>Datos del Acelerómetro y Giroscopio</h1>
     <div id="data">
@@ -102,13 +131,15 @@
 
             // Acelerómetro
             if (window.DeviceMotionEvent) {
-                window.addEventListener('devicemotion', function(event) {
+                window.addEventListener('devicemotion', function (event) {
                     const acceleration = event.acceleration;
                     const accelData = `
                         <h2>Acelerómetro:</h2>
+                
                         <p class='A1'>Aceleración X: ${acceleration.x ? acceleration.x.toFixed(2) : 'N/A'}</p>
                         <p class='A2'>Aceleración Y: ${acceleration.y ? acceleration.y.toFixed(2) : 'N/A'}</p>
                         <p class='A3'>Aceleración Z: ${acceleration.z ? acceleration.z.toFixed(2) : 'N/A'}</p>
+                   
                     `;
                     accelDiv.innerHTML = accelData;
                     log(`Acelerómetro - X: ${acceleration.x}, Y: ${acceleration.y}, Z: ${acceleration.z}`);
@@ -120,7 +151,7 @@
 
             // Giroscopio
             if (window.DeviceOrientationEvent) {
-                window.addEventListener('deviceorientation', function(event) {
+                window.addEventListener('deviceorientation', function (event) {
                     const alpha = event.alpha;
                     const beta = event.beta;
                     const gamma = event.gamma;
@@ -142,4 +173,5 @@
         initSensors();
     </script>
 </body>
+
 </html>
