--- a/prb.html
+++ b/prb.html
@@ -136,9 +136,9 @@
                     const accelData = `
                         <h2>Acelerómetro:</h2>
                 
-                        <p class='A1'>Aceleración X: ${acceleration.x ? acceleration.x.toFixed(2) : 'N/A'}</p>
-                        <p class='A2'>Aceleración Y: ${acceleration.y ? acceleration.y.toFixed(2) : 'N/A'}</p>
-                        <p class='A3'>Aceleración Z: ${acceleration.z ? acceleration.z.toFixed(2) : 'N/A'}</p>
+                        <p class='A1'>Aceleración X:<br>${acceleration.x ? acceleration.x.toFixed(2) : 'N/A'}</p>
+                        <p class='A2'>Aceleración Y:<br> ${acceleration.y ? acceleration.y.toFixed(2) : 'N/A'}</p>
+                        <p class='A3'>Aceleración Z:<br> ${acceleration.z ? acceleration.z.toFixed(2) : 'N/A'}</p>
                    
                     `;
                     accelDiv.innerHTML = accelData;
@@ -157,9 +157,9 @@
                     const gamma = event.gamma;
                     const gyroData = `
                         <h2>Giroscopio:</h2>
-                        <p class='B1'>Alpha (Z-axis): ${alpha.toFixed(2)}</p>
-                        <p class='B2'>Beta (X-axis): ${beta.toFixed(2)}</p>
-                        <p class='B3'>Gamma (Y-axis): ${gamma.toFixed(2)}</p>
+                        <p class='B1'>Alpha (Z-axis):<br> ${alpha.toFixed(2)}</p>
+                        <p class='B2'>Beta (X-axis):<br> ${beta.toFixed(2)}</p>
+                        <p class='B3'>Gamma (Y-axis):<br> ${gamma.toFixed(2)}</p>
                     `;
                     gyroDiv.innerHTML = gyroData;
                     log(`Giroscopio - Alpha: ${alpha}, Beta: ${beta}, Gamma: ${gamma}`);
