--- a/prb.html
+++ b/prb.html
@@ -21,11 +21,14 @@
             text-align: center;
             width: 300px;
         }
-        h1{
+
+        #accelerometer{
             margin-top: 100px;
         }
+
         #accelerometer,
         #gyroscope {
+            
             padding: 20px;
             background-color: #fff;
             border: 1px solid #ddd;
@@ -117,7 +120,6 @@
 </head>
 
 <body>
-    <h1>Datos del Acelerómetro y Giroscopio</h1>
     <div id="data">
         <div id="accelerometer">Esperando datos del acelerómetro...</div>
         <div id="gyroscope">Esperando datos del giroscopio...</div>
